--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ VITE_AZURE_LOGOUT_URI=http://localhost:5173/
 
 # API Scopes (optional, for API access)
 VITE_AZURE_SCOPES=User.Read email profile openid
+
+# AI Summarization (Netlify Functions)
+OPENAI_API_KEY=
+OPENAI_SUMMARIZE_MODEL=gpt-4o-mini
